--- a/.github/workflows/grandmaster_sec_0930.yml
+++ b/.github/workflows/grandmaster_sec_0930.yml
@@ -14,30 +14,49 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
+        with:
+          python-version: "3.11"
+
       - name: Patch config from secrets (optional)
         run: |
           python - << 'PY'
           import json, os, pathlib
-          p=pathlib.Path("config/config.json"); cfg=json.loads(p.read_text())
-          for k in ("CONTACT_EMAIL","UA_ORG","HOSTINGER_UPLOAD_URL","HOSTINGER_SECRET"):
-            v=os.getenv(k)
-            if not v: continue
-            if k=="CONTACT_EMAIL": cfg["contact_email"]=v
-            elif k=="UA_ORG": cfg["user_agent_org"]=v
-            elif k=="HOSTINGER_UPLOAD_URL": cfg["hostinger_upload_url"]=v
-            elif k=="HOSTINGER_SECRET": cfg["hostinger_secret"]=v
-          p.write_text(json.dumps(cfg, indent=2)); print("Config patched")
+          p = pathlib.Path("config/config.json")
+          if not p.exists():
+              raise SystemExit(f"config not found at {p}")
+          cfg = json.loads(p.read_text())
+          mapping = {
+            "CONTACT_EMAIL": "contact_email",
+            "UA_ORG": "user_agent_org",
+            "HOSTINGER_UPLOAD_URL": "hostinger_upload_url",
+            "HOSTINGER_SECRET": "hostinger_secret",
+          }
+          changed = False
+          for env_key, cfg_key in mapping.items():
+              v = os.getenv(env_key)
+              if v:
+                  cfg[cfg_key] = v
+                  changed = True
+          if changed:
+              p.write_text(json.dumps(cfg, indent=2))
+              print("Config patched from secrets.")
+          else:
+              print("No secrets provided; using repo config.json.")
           PY
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run Grand Master SEC v23.1b (Full-Text forced)
+        timeout-minutes: 45
         run: |
-          python -u scripts/sec/grandmaster_sec_v23.py
+          python -u -m scripts.sec.grandmaster_sec_v23
+
       - name: Show artifacts
         if: always()
         run: |
