--- a/.github/workflows/grandmaster_sec_0930.yml
+++ b/.github/workflows/grandmaster_sec_0930.yml
@@ -1,20 +1,43 @@
-name: GrandMaster SEC | 09:30→09:30 Boundary Scan (Self-Healing)
+name: GrandMaster SEC | 09:30→09:00 Previous-Day Scan (Deterministic)
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: "35 13 * * 1-5"
+    # 09:35 ET during EDT ~ 13:35 UTC; adjust if DST changes
+    - cron: '35 13 * * 1-5'
+
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 45
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.11", cache: "pip" }
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run Grand Master SEC v23.2M
-        env: { CI: "true" }
+        run: pip install -r requirements.txt
+
+      - name: Run GrandMaster
+        env:
+          PYTHONUNBUFFERED: '1'
         run: python -u -m scripts.sec.grandmaster_sec_v23
+
+      - name: Show stats
+        if: always()
+        run: |
+          echo '--- sec_debug_stats.json ---'
+          if [ -f data/sec_debug_stats.json ]; then cat data/sec_debug_stats.json; else echo 'missing'; fi
+          echo '--- snapshot head ---'
+          if [ -f data/sec_filings_snapshot.json ]; then head -n 80 data/sec_filings_snapshot.json; else echo 'missing'; fi
