--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "version": "v23.2M",
-  "contact_email": "ops@example.com",
+  "contact_email": "chrisjohnson11835@gmail.com",
   "user_agent": "GrandMasterSEC/23.2M (+ops@example.com)",
   "reqs_per_sec": 0.7,
   "timeout_sec": 20,
-  "hostinger_upload_url": "",
-  "hostinger_secret": ""
+  "hostinger_upload_url": "https://royalblue-lion-727879.hostingersite.com/receiver.php?",
+  "hostinger_secret": "Asgar_GrandMaster_2049!"
 }
